--- a/src/components/Postcard/Postcard.scss
+++ b/src/components/Postcard/Postcard.scss
@@ -2,4 +2,14 @@
   padding: 1rem;
   grid-column: postcard-start/postcard-end;
   grid-row: postcard-start/postcard-end;
+  position: relative;
+
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    height: calc(100% - 4rem);
+  }
 }
