--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,6 +1,22 @@
 .Sidebar {
-  padding: 1rem;
+  padding: 3rem;
   grid-column: sidebar-start/sidebar-end;
   grid-row: start/end;
   border-left: 1px solid rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+
+  button {
+    border: none;
+    outline: none;
+    padding: 0 1rem;
+    height: 3rem;
+    line-height: 3rem;
+    border-radius: 2px;
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+    color: #ffffff;
+    background-color: #63abff;
+    cursor: pointer;
+  }
 }
