--- a/src/components/Thumbnails/Thumbnails.scss
+++ b/src/components/Thumbnails/Thumbnails.scss
@@ -1,6 +1,26 @@
 .Thumbnails {
+  position: relative;
   padding: 1rem;
   grid-column: start/sidebar-start;
   grid-row: thumbnails-start/thumbnails-end;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
+
+  .wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      height: calc(100% - 2rem);
+      width: auto;
+      margin: 0 0.5rem;
+    }
+  }
 }
