--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -19,4 +19,55 @@
     background-color: #63abff;
     cursor: pointer;
   }
+
+  .overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    visibility: hidden;
+    z-index: 10;
+
+    &.visible {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .wrapper {
+      display: flex;
+      cursor: pointer;
+
+      input {
+        border: none;
+        outline: none;
+        padding: 0 1rem;
+        height: 3rem;
+        line-height: 3rem;
+        border-radius: 2px;
+        font-size: 1.2rem;
+        color: #63abff;
+        background-color: #ffffff;
+      }
+
+      button {
+        border: none;
+        outline: none;
+        padding: 0 1rem;
+        height: 3rem;
+        line-height: 3rem;
+        border-radius: 2px;
+        margin-left: 0.5rem;
+        font-size: 1.2rem;
+        color: #ffffff;
+        background-color: #63abff;
+        cursor: pointer;
+      }
+    }
+  }
 }
