--- a/src/components/Postcard/Postcard.scss
+++ b/src/components/Postcard/Postcard.scss
@@ -11,5 +11,6 @@
     transform: translate(-50%, -50%);
     width: auto;
     height: calc(100% - 4rem);
+    box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.25);
   }
 }
