--- a/src/components/Thumbnails/Thumbnails.scss
+++ b/src/components/Thumbnails/Thumbnails.scss
@@ -21,6 +21,7 @@
       height: calc(100% - 2rem);
       width: auto;
       margin: 0 0.5rem;
+      box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.25);
       cursor: pointer;
     }
   }
