--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -77,7 +77,7 @@
         width: 120px;
         height: 3rem;
         line-height: 3rem;
-        text-align: right;
+        padding: 0 1rem;
         color: #ffffff;
       }
     }
